--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-100">
 <head>
   <meta charset="utf-8">
   <title>RecipeBook</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="h-100">
 	<app-root></app-root>
-
 </body>
 </html>
